--- a/tools/cfgs/default.yaml
+++ b/tools/cfgs/default.yaml
@@ -4,7 +4,7 @@ INCLUDE_SIMILAR_TYPE: True
 
 # config of augmentation
 AUG_DATA: False
-AUG_METHOD_LIST: ['rotation2', 'scaling2', 'flip2']
+AUG_METHOD_LIST: ['rotation', 'scaling', 'flip']
 AUG_METHOD_PROB: [1.0, 1.0, 0.5]
 AUG_ROT_RANGE: 18
 
